Closed Bug 385431 Opened 18 years ago Closed 18 years ago

mozStorageAsyncIO.cpp:559: warning: unused variable 'message'

Categories

(Core :: SQLite and Embedded Database Bindings, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9alpha6

People

(Reporter: sdwilsh, Assigned: sciguyryan)

Details

Attachments

(1 file)

Compiler warning that should be fixed.
Attached patch Patch v1.0Splinter Review
Patch v1.0 Bye bye unused variable.
Assignee: nobody → sciguyryan
Status: NEW → ASSIGNED
Attachment #269357 - Flags: review?(sdwilsh)
Comment on attachment 269357 [details] [diff] [review] Patch v1.0 No more C style declaration too!
Attachment #269357 - Flags: review?(sdwilsh) → review+
Whiteboard: [checkin needed]
Checking in storage/src/mozStorageAsyncIO.cpp; new revision: 1.16; previous revision: 1.15
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Flags: in-testsuite-
Status: RESOLVED → VERIFIED
Target Milestone: --- → mozilla1.9alpha6
Product: Toolkit → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: