Bug 385431 - mozStorageAsyncIO.cpp:559: warning: unused variable 'message'.  Patch by Ryan Jones <sciguyryan@gmail.com>.  r=sdwilsh